--- a/index.html
+++ b/index.html
@@ -880,15 +880,13 @@
                                       const $select = document.querySelector('#mint')
                                       quantity_selected = parseInt($select.value);
                                     }
-                                    window.addEventListener('load', function () {
+                                    setInterval(function () {
                                         const $select = document.querySelector('#mint');
                                         $select.value = 1;
 
                                         var supply = totalSupply();
                                         document.querySelector('#totalSupply').innerHtml = `${supply}/10000`;
-                                        console.log(`supply = ${supply}`);
-
-                                    });
+                                    }, 1000);
                                   </script>
                                   <button onclick="wl_mint(quantity_selected)">Mint!</button>
                                   <script>
