--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@
                                     $select.value = 1;
                                     setInterval(function () {
                                         var supply = totalSupply();
-                                        document.querySelector('#totalSupply').innerText = `${Math.random()}/10000`;
+                                        document.querySelector('#totalSupply').innerText = `${supply}/10000`;
                                     }, 1000);
                                   </script>
                                   <button onclick="wl_mint(quantity_selected)">Mint!</button>
