--- a/index.html
+++ b/index.html
@@ -893,12 +893,21 @@
                                       contractPromise.then(function (contract) {
                                         web3.eth.getAccounts(function (err, accounts) {
                                           const accountAddress = accounts[0];
+                                          
+                                          if (supplyTotal <= 4999) {
+                                            const valueInEther = 0.002 * quantity_selected;
+                                            const valueInWei = web3.utils.toWei(
+                                              valueInEther.toString(),
+                                              "ether"
+                                            );
+                                          } else {
+                                            const valueInEther = 0.004 * quantity_selected;
+                                            const valueInWei = web3.utils.toWei(
+                                              valueInEther.toString(),
+                                              "ether"
+                                            );
+                                          }
 
-                                          const valueInEther = 0.002 * quantity_selected;
-                                          const valueInWei = web3.utils.toWei(
-                                            valueInEther.toString(),
-                                            "ether"
-                                          );
                                           contract.methods
                                             .mint(quantity_selected)
                                             .send({ from: accountAddress, value: valueInWei });
