--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
                                           const accountAddress = accounts[0];
                                           
                                           var valueInWei;
-                                          
+
                                           if (supplyTotal <= 4999) {
                                             const valueInEther = 0.002 * quantity_selected;
                                             valueInWei = web3.utils.toWei(
@@ -1053,13 +1053,12 @@
                                   Mint Options:
                                 </option>
                                 <option value="#">-----------</option>
-                                <option value="White List">White List</option>
                                 <option value="Public Mint">Public Mint</option>
                               </select>
                               <script>
                                 window.addEventListener('load', function () {
                                   const $selectMint = document.querySelector('#minter');
-                                  $selectMint.value = 'White List'
+                                  $selectMint.value = 'Public Mint'
                                 });
                               </script>
                             </span>
