--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
                                 <div style="float:right; margin-right: 190px; margin-top:30px;">
                                   <h3 style="color:white;">Select Quantity to Mint!</h3>
                                   <h3 id="totalSupply" style="color:white;">1000/10000</h3>
-                                  <h3 style="color:white;">Price: 0.002Ξ</h3>
+                                  <h3 style="color:white;">Price: 0.002Ξ each</h3>
                                   <select name="cat" id="mint" onchange="quantityChange()">
                                     <option value="#" selected="">
                                         quantity:
