--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
     <body>
  /*
     /// -------------------------------------
-    /// 🔫 Grift Wars
+    /// 🔫 GRIFT PAPER
     /// -------------------------------------
 
     Premise: 
