--- a/index.html
+++ b/index.html
@@ -1,85 +1,43 @@
-    <body>
- /*
-    /// -------------------------------------
-    /// 🔫 GRIFT PAPER
-    /// -------------------------------------
+<p>/*  /// -------------------------------------  /// &#55357;&#56619; GRIFT PAPER  /// -------------------------------------</p>
 
-    Premise: 
-    
-    - Each Remilio64 starts as ALIVE.
+<p> Premise:     - Each Remilio64 starts as ALIVE.</p>
 
-    - Each Remilio64 starts with a bounty of 0.
+<p> - Each Remilio64 starts with a bounty of 0.</p>
 
-    - Each ALIVE Remilio64 can shoot someone with ether.
+<p> - Each ALIVE Remilio64 can shoot someone with ether.</p>
 
-    - MIN bullet cost is 0.0005Ξ FOR SANITY.
+<p> - MIN bullet cost is 0.0005&#926; FOR SANITY.</p>
 
-    - NO friendly fire.
+<p> - NO friendly fire.</p>
 
-    - IF an ALIVE Remilio64 (A) is shot by an ALIVE REMILIO (B):
-        - IF A's bounty is 0, it is DEAD. B's bounty increases
-        to X where X is the amount of ETHER B shot A with.
+<p> - IF an ALIVE Remilio64 (A) is shot by an ALIVE REMILIO (B):  - IF A's bounty is 0, it is DEAD. B's bounty increases  to X where X is the amount of ETHER B shot A with.</p>
 
-        - IF A's bounty is not 0, A's bounty is subtracted by
-        X * (X/A's bounty) where X is the the amount of ETHER B shot A with and
-        added to B's bounty.
-            SO:
-            - B's bounty increases to X * (X/A's bounty).
-            - IF A's new bounty is 0, it is DEAD.
-            - IF A's new bounty is >0, it is still ALIVE with
-            with old_bounty - (X * (X/A's bounty)).
+<p> - IF A's bounty is not 0, A's bounty is subtracted by  X * (X/A's bounty) where X is the the amount of ETHER B shot A with and  added to B's bounty.  SO:  - B's bounty increases to X * (X/A's bounty).  - IF A's new bounty is 0, it is DEAD.  - IF A's new bounty is >0, it is still ALIVE with  with old_bounty - (X * (X/A's bounty)).</p>
 
-            NOTE: The reason behind the shot not just subtracting,
-            but instead subtracting a percentage is because 'whales' would 
-            be to susceptible to getting ganged up on and there is 
-            NO INCENTIVE for them. This makes it harder to take 
-            down 'whales', but still provides value to higher
-            valued shots. This seems to be most fair to me.
+<p> NOTE: The reason behind the shot not just subtracting,  but instead subtracting a percentage is because 'whales' would   be to susceptible to getting ganged up on and there is   NO INCENTIVE for them. This makes it harder to take   down 'whales', but still provides value to higher  valued shots. This seems to be most fair to me.</p>
 
-        - These bounty changes reflected in the FACTION_BOUNTY
+<p> - These bounty changes reflected in the FACTION_BOUNTY</p>
 
-        EVERYTIME A REMILIO KILLS ANOTHER REMILIO, IT'S KILL
-        COUNT WILL INCREASE BY 1. THIS IS SIMPLY A VANITY METRIC
-        BUT A COOL FLEX 💪.
+<p> EVERYTIME A REMILIO KILLS ANOTHER REMILIO, IT'S KILL  COUNT WILL INCREASE BY 1. THIS IS SIMPLY A VANITY METRIC  BUT A COOL FLEX &#55357;&#56490;.</p>
 
-    - There is a CUTOFF datetime when the war ends.
+<p> - There is a CUTOFF datetime when the war ends.</p>
 
-    AFTER THE CUT OFF DATE:
+<p> AFTER THE CUT OFF DATE:</p>
 
-    - Each faction's TOTAL_BOUNTY is calculated.
+<p> - Each faction's TOTAL_BOUNTY is calculated.</p>
 
-    - The winning faction will consume the balances of every
-    other faction's TOTAL_BOUNTY, leaving it with a FINAL_BOUNTY.
+<p> - The winning faction will consume the balances of every  other faction's TOTAL_BOUNTY, leaving it with a FINAL_BOUNTY.</p>
 
-    - The 33% of the FINAL_BOUNTY is transferred to the dev team. 
+<p> - The 33% of the FINAL_BOUNTY is transferred to the dev team.</p>
 
-    - 10% will go to EVERY REM64 on the winning faction who shot someone.
+<p> - 10% will go to EVERY REM64 on the winning faction who shot someone.</p>
 
-    - Each token in the winning faction's bounty, will serve as a
-    claim on the (FINAL_BOUNTY * 0.57), proportional to (TOTAL_BOUNTY/TOKEN_BOUNTY).
+<p> - Each token in the winning faction's bounty, will serve as a  claim on the (FINAL_BOUNTY * 0.57), proportional to (TOTAL_BOUNTY/TOKEN_BOUNTY).</p>
 
-    FIN.
+<p> FIN.</p>
 
-    INCENTIVES: 
-        - Because 10% of winnings is claimable by ANY shooters dead or alive on the
-        winning faction, it encourages people to make at the very least the min shot.
-        - Killing Remilio's stimulates gameplay because a dead remilio can't shoot and the holder would need to trade/buy a new one if they want to keep playing.
-        - Killing Whale's has the same effect, incentivizes whales to re-enter.
-        - People will want to jump factions, this stimulates trading.
-        - People work together on a public strategy to kill particular factions.
-        - Drives community, creates a lot of engagement, bringing attention to
-        the project.
-        - EMERGENT METAS FROM COMMUNITY, WHO KNOWS WHAT THESE WILL BE.
+<p> INCENTIVES:   - Because 10% of winnings is claimable by ANY shooters dead or alive on the  winning faction, it encourages people to make at the very least the min shot.  - Killing Remilio's stimulates gameplay because a dead remilio can't shoot and the holder would need to trade/buy a new one if they want to keep playing.  - Killing Whale's has the same effect, incentivizes whales to re-enter.  - People will want to jump factions, this stimulates trading.  - People work together on a public strategy to kill particular factions.  - Drives community, creates a lot of engagement, bringing attention to  the project.  - EMERGENT METAS FROM COMMUNITY, WHO KNOWS WHAT THESE WILL BE.</p>
 
-    NOTES:
-        - The WAR will open with a specific cutoff time and date. This will not
-          be modifiable. PERIOD. IT IS PROGRAMMED.
-        - NO NEW ACTIONS will be permitted after the CUTOFF DATE.
-        - CLAIMS will only be open after the CUTOFF DATE.
-        - DEV will ONLY be able to access 33% stake once CUT OFF DATE IS REACHED.
-        - Any funds in FINAL_BOUNTY will ONLY be accessible to Rem64 claims. Dev
-          can never access these. As such there's a chance some ether is locked away permanently from never be claimed.
+<p> NOTES:  - The WAR will open with a specific cutoff time and date. This will not  be modifiable. PERIOD. IT IS PROGRAMMED.  - NO NEW ACTIONS will be permitted after the CUTOFF DATE.  - CLAIMS will only be open after the CUTOFF DATE.  - DEV will ONLY be able to access 33% stake once CUT OFF DATE IS REACHED.  - Any funds in FINAL_BOUNTY will ONLY be accessible to Rem64 claims. Dev  can never access these. As such there's a chance some ether is locked away permanently from never be claimed.</p>
 
-*/
-    </body>
-   
+<p>*/</p>
