--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<style>
+  p {
+    font-family: monospace;
+  }
+</style>
 <p>/*  /// -------------------------------------  /// &#55357;&#56619; GRIFT PAPER  /// -------------------------------------</p>
 
 <p> Premise:     - Each Remilio64 starts as ALIVE.</p>
